applications/services/hubble/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hubble-auth
  labels:
    managed-by: argocd
